outdoor_throw_pillows/throw_pillows.css
* {
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
}

#wrapper {
    display: grid;
    grid-template-columns: 150px repeat(10, auto) 150px;
    grid-template-rows: repeat(3, auto);
}

.header {
    display: grid;
    grid-column-start: 1;
    grid-column-end: 13;
    grid-row-start: 1;
    grid-row-end: 1;
    grid-template-columns: 150px repeat(10, auto) 150px;
    grid-template-rows: repeat(3, auto);
}

.header-1 {
    display: grid;
    grid-column-start: 2;
    grid-column-end: 12;
    grid-row-start: 1;
    grid-row-end: 1;
    grid-template-columns: 150px repeat(10, auto) 150px;
    grid-template-rows: auto;
}

.menu-bar {
    display: grid;
    grid-column-start: 3;
    grid-column-end: 11;
    grid-row-start: 2;
    grid-row-end: 2;
    grid-template-columns: repeat(9, auto);
    grid-template-rows: auto;
    text-align: center;
    font-size: 12px;
    margin-top: 20px;
}

.promotion {
    grid-column-start: 1;
    grid-column-end: 13;
    grid-row-start: 3;
    grid-row-end: 3;
    text-align: center;
    background-color: #8daacb;
    margin-top: 10px;
    margin-bottom: 10px;
    padding-top: 10px;
    padding-bottom: 10px;
}

.promotion > a {
    color: #fff;
    font-size: 14px;
}

.logo {
    grid-column-start: 1;
    grid-column-end: 1;
    grid-row-start: 1;
    grid-row-end: 1;
    display: flex;
    justify-content: center;
    padding-top: 10px;
}

.logo > img {
    width: 170px;
    height: 30px;
}

.search {
    grid-column-start: 11;
    grid-column-end: 12;
    grid-row-start: 1;
    grid-row-end: 1;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 12px;
}

.search > img {
    width: 16px;
    height: 16px;
    margin-right: 10px;
}

.cart {
    grid-column-start: 12;
    grid-column-end: 13;
    grid-row-start: 1;
    grid-row-end: 1;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 12px;
}

.cart > img {
    width: 16px;
    height: 16px;
    margin-right: 10px;
}

.body {
    display: grid;
    grid-column-start: 2;
    grid-column-end: 12;
    grid-row-start: 2;
    grid-row-end: 2;
    grid-template-columns: 20% repeat(11, auto) ;
    grid-template-rows: auto;
}

.breadcumb {
    grid-column-start: 1;
    grid-column-end: 13;
    grid-row-start: 1;
    grid-row-end: 1;
    font-size: 14px;
}

.category-name {
    grid-column-start: 1;
    grid-column-end: 13;
    grid-row-start: 2;
    grid-row-end: 2;
    margin-top: 10px;
    margin-bottom: 40px;
    text-align: center;
    font-size: 22px;
}

.navigation {
    grid-column: 1 / 4;
    grid-row: 3 / 3;
}

.filter {
    font-size: 13px;
    display: flex;
    align-content: center;
    padding-bottom: 30px;
    border-bottom: 1px solid whitesmoke;
}

.filter > img {
    margin-right: 10px;
    width: 16px;
    height: 16px;
}

.content {
    display: grid;
    grid-column-start: 4;
    grid-column-end: 13;
    grid-row-start: 3;
    grid-row-end: 3;
    grid-column-gap: 30px;
    grid-row-gap: 10px;
    grid-template-columns: repeat(3, auto);
    grid-template-rows: repeat(3, auto);
}

.content-card {
    text-align: center;
}

.content-card img {
    margin-top: 30px;
    width: 98%;
}

.content-name {
    font-size: 15px;
}

.content-name-2 {
    margin-top: 10px;
    font-size: 14px;
    color: grey;
}

.content-price {
    margin-top: 10px;
    font-size: 12px;
}

.category-description {
    margin-top: 40px;
    color: grey;
    grid-row: 4 / 4;
    grid-column: 1 / 13;
}

.footer {
    margin-top: 200px;
    display: grid;
    grid-column: 1 / 13;
    grid-row: 3 / 3;
    grid-template-columns: 150px repeat(10, auto) 150px;
    grid-template-rows: repeat(4, auto);
}

.social-contacts {
    grid-column: 2 / 12;
    grid-row: 1 / 1;
    text-align: right;
    margin-bottom: 20px;
}

.social-contacts > img {
    width: 32px;
    height: 32px;
    margin-left: 10px;
}

.information {
    grid-column: 1 / 13;
    grid-row: 2 / 2;
    display: grid;
    grid-template-columns: repeat(12, auto);
    grid-template-rows: auto;
    background-color: #8daacb;
}

.information-wrapper {
    margin-top: 10px;
    margin-bottom: 10px;
    grid-column: 3 / 9;
    grid-row: 1 / 1;
}

.information-wrapper > a {
    margin-right: 10px;
    text-decoration: none;
    font-size: 12px;
    color: #fff;
}

.slogan {
    grid-column: 9 / 11;
    grid-row: 1 / 1;
    font-size: 16px;
    color: #fff;
    display: flex;
    align-items: center;
    justify-content: center;
}

.partners {
    margin-top: 30px;
    margin-bottom: 30px;
    grid-column: 2 / 12;
    grid-row: 3 / 3;
    display: grid;
    grid-template-columns: repeat(6, auto);
    grid-template-rows: auto;
    align-items: center;
}

.partners > img {
    width: 80%;
}

.copyright {
    font-size: 13px;
    grid-column: 1 / 13;
    grid-row: 4 / 4;
    text-align: center;
}

